--- a/src/app/components/attendance/attendance.component.css
+++ b/src/app/components/attendance/attendance.component.css
@@ -37,3 +37,24 @@ butHeight{
     -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
     animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
+
+.table-fixed thead {
+    width: 97%;
+   
+  }
+  .table-fixed tbody {
+    height: 330px;
+    overflow-y: auto;
+    width: 100%;
+    
+  }
+  .table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
+    display: block;
+  }
+  .table-fixed tbody td, .table-fixed thead > tr> th {
+    float: left;
+    border-bottom-width: 0;
+  }
+.tableft{
+    margin-left: 3%
+}
