--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -5,39 +5,42 @@
       <div class="heading4">{{'Employee Attendance' | translate}}</div>
     </header>
     <div class="addbtn">
-      <button class="btn btn-primary adduser"  type="button" data-toggle="modal" data-target="#myModal">{{'Add Employee Attendance'| translate}}
+      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'Add Employee Attendance'| translate}}
       </button>
       <div class="input-group input-group-lg searchButton">
         <input type="date" class="form-control" style="height: 40px" placeholder="Search By Name" [(ngModel)]="date">
         <div class="input-group-btn">
-          <button class="btn btn-default" style="height: 40px" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+          <button class="btn btn-default" style="height: 40px" type="submit">
+            <i class="glyphicon glyphicon-search"></i>
+          </button>
         </div>
       </div>
     </div>
     <div layout="row" class="userlist ">{{'Attendance List' | translate}}</div>
-    <table class="table table-striped table-hover settable">
+    <table class="table table-striped table-hover table-fixed settable"[mfData]="allAttendance" #mf="mfDataTable"  (mfSelectedEntities)="setSelectedEntities($event)" >
       <thead>
         <tr>
-          <th>{{ 'No' | translate }}</th>
-          <th>EmployeeId</th>
-          <th>{{ 'Intime' | translate }}</th>
-          <th>{{ 'Outtime' | translate }}</th>
-          <th>{{ 'Totaltime' | translate }}</th>
-          <th>{{ 'Date' | translate }}</th>
-          <th>{{ 'Status' | translate }}</th>
-          <th style="margin-left: 60%">Action</th>
+          <th class="col-xs-1">{{ 'No' | translate }}</th>
+          <th class="col-xs-2">{{'EmployeeId'|translate}}</th>
+          <th class="col-xs-2">{{ 'Intime' | translate }}</th>
+          <th class="col-xs-2">{{ 'Outtime' | translate }}</th>
+          <th class="col-xs-2" style="margin-right: -20px;">{{ 'Date' | translate }}</th>
+          <mfDefaultSorter by="status"  class="col-xs-1">{{ 'Status' | translate }}</mfDefaultSorter >
+          <th class="col-xs-2" style="margin-left: 20px">Action</th>
         </tr>
+
       </thead>
-      <tr *ngFor="let attendance of allAttendance |filter:date">
-          <td class="tablerow">{{attendance.id}}</td>
-        <td class="tablerow">{{attendance.employee.userid}}</td>
-        <td class="tablerow">{{attendance.intime}}</td>
-        <td class="tablerow">{{attendance.outtime}}</td>
-        <td class="tablerow">{{attendance.totaltime}}</td>
-        <td class="tablerow">{{attendance.date}}</td>
-        <td class="tablerow">{{attendance.status}}</td>
-        <td class="tablerow">
-          <span class="action-link" role="button" tabindex="0" (click)="loadEmployeeAttendanceToEdit(attendance.id)" data-toggle="modal" data-target="#myModal">{{'Edit'| translate}}</span>
+      <tr *ngFor="let attendance of allAttendance | orderBy : Attendance">
+          
+        <td class="tablerow col-xs-1">{{attendance.id}}</td>
+        <td class="tablerow col-xs-2  ">{{attendance.employee.userid}}</td>
+        <td class="tablerow col-xs-2">{{attendance.intime}}</td>
+        <td class="tablerow col-xs-2">{{attendance.outtime}}</td>
+        <td class="tablerow  col-xs-2" style="margin-right: -20px;">{{attendance.date}}</td>
+        <td class="tablerow  col-xs-1" >{{attendance.status}}</td>
+        <td class="tablerow col-xs-2 ">
+          <span class="action-link" role="button" tabindex="0" (click)="loadEmployeeAttendanceToEdit(attendance.id)" data-toggle="modal"
+            data-target="#myModal">{{'Edit'| translate}}</span>
           <span> | </span>
           <span class="action-link" role="button" tabindex="0" (click)="deleteEmployeeAttendance(attendance.id)">{{'Delete'|translate}}</span>
         </td>
@@ -47,60 +50,56 @@
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <form [formGroup]="attendanceForm" (ngSubmit)="onEmployeeAttendanceFormSubmit()">
-<div class="modal-dialog modaldialog">
-  <div class="modal-content" style="    height: 500px;">
-    <div class="modal-header dialog">
-      <button type="button" class="close" data-dismiss="modal">&times;</button>
-      <h2 class="modal-title modaltitle">{{"Add New Attendance" |translate}}</h2>
-    </div>
-    <div class="modal-body">
-      <div class="row" style="    margin-top: 30px">
-        <div class=" form-group col-lg-6" style="margin-left: 35px;">
-          <label class="label-name " >{{ 'EmployeeId' | translate }}</label>
-          <select    class="loginUserid"  formControlName="employee" >
-            <option *ngFor=" let employee of allEmployee" [value]="employee.id"  >
-               {{employee.userid}}
-            </option>
-          </select>
+    <div class="modal-dialog modaldialog">
+      <div class="modal-content" style="    height: 500px;">
+        <div class="modal-header dialog">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h2 class="modal-title modaltitle">{{"Add New Attendance" |translate}}</h2>
         </div>
+        <div class="modal-body">
+          <div class="row" style="    margin-top: 30px">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;">
+              <label class="label-name ">{{ 'EmployeeId' | translate }}</label>
+              <select class="loginUserid" formControlName="employee">
+                <option *ngFor=" let employee of allEmployee" [value]="employee.id">
+                  {{employee.userid}}
+                </option>
+              </select>
+            </div>
 
-        <div class="col-lg-offset-5">
-          <div class=" form-group col-lg-6">
-            <label class="label-name " > {{ 'Intime' | translate }}</label>
-            <input type="time" *ngIf="attendanceForm.get('intime')" step="0" id="intime" formControlName="intime"  class="loginUserid"  >
-            <app-control-messages [control]="attendanceForm.controls.intime"></app-control-messages>
-          </div>
-        </div>
-      </div>
-      <div class="row" style="    margin-top: 30px">
-          <div class=" form-group col-lg-6" style="margin-left: 35px;">
-            <label class="label-name " >{{ 'Outtime' | translate }}</label>
-            <br>
-            <input type="time" *ngIf="attendanceForm.get('outtime')" step="0" formControlName="outtime" class="loginUserid" >
-            <app-control-messages [control]="attendanceForm.controls.outtime"></app-control-messages>
-          </div>
-  
-          <div class="col-lg-offset-5">
-            <div class=" form-group col-lg-6">
-              <label class="label-name " > {{ 'Date' | translate }}</label>
-              <input type="date" *ngIf="attendanceForm.get('date')" formControlName="date"  class="loginUserid" >
-              <app-control-messages [control]="attendanceForm.controls.date" [group]="attendanceForm" ></app-control-messages>
-             
+            <div class="col-lg-offset-5">
+              <div class=" form-group col-lg-6">
+                <label class="label-name "> {{ 'Intime' | translate }}</label>
+                <input type="time" *ngIf="attendanceForm.get('intime')" step="0" id="intime" formControlName="intime" class="loginUserid">
+                <app-control-messages [control]="attendanceForm.controls.intime"></app-control-messages>
+              </div>
             </div>
           </div>
-        </div>
-      <div class="savebtn">
-        <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid" >{{'Save'|translate}}</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
+          <div class="row" style="    margin-top: 30px">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;">
+              <label class="label-name ">{{ 'Outtime' | translate }}</label>
+              <br>
+              <input type="time" *ngIf="attendanceForm.get('outtime')" step="0" formControlName="outtime" class="loginUserid">
+              <app-control-messages [control]="attendanceForm.controls.outtime"></app-control-messages>
+            </div>
+
+            <div class="col-lg-offset-5">
+              <div class=" form-group col-lg-6">
+                <label class="label-name "> {{ 'Date' | translate }}</label>
+                <input type="date" *ngIf="attendanceForm.get('date')" formControlName="date" class="loginUserid">
+                <app-control-messages [control]="attendanceForm.controls.date" [group]="attendanceForm"></app-control-messages>
+
+              </div>
+            </div>
+          </div>
+          <div class="savebtn">
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid">{{'Save'|translate}}</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
       margin-left: 20px;">Close</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
+  </form>
 </div>
-</form>
-</div>
-<div id="snackbar" ></div>
-
-
-
-
+<div id="snackbar"></div>
